PyMaker/datas/object2/RawHTML/i11601/Python_DOC_referPages.issue-with-if-else-statements.txt
<div class="post-text" itemprop="text">
<p>This is what I've input:</p>
<pre><code>def greater_less_equal_5(answer):
    if 6 &gt; 5:
        return 1
    elif  4 &lt; 5:
        return -1
    else:
        return 0

print greater_less_equal_5(4)
print greater_less_equal_5(5)
print greater_less_equal_5(6)
</code></pre>
<p>and gave me this note</p>
<blockquote>
<p>Oops, try again. It looks like your function output 1 instead of -1
  when answer is 3. Make sure you filled in the if and elif statements
  correctly!</p>
</blockquote>
<p>and this is what came up in the upper right display:</p>
<pre><code>&gt;1
&gt;1
&gt;1
&gt;None
</code></pre>
<p>No matter how I change around the numbers and the <code>&gt;</code>/<code>&lt;</code> I've even tried <code>==</code> and <code>!=</code> it still outputs <code>1 1 1 None</code>.</p>
<p>I've searched around for any possible tips and seen others stuck on the same problem as me and when I tried their solves I then get:</p>
<pre><code>def greater_less_equal_5(answer):
    if &gt; 5:
        return 1
    elif  &lt; 5:
        return -1
    else:
        return 0

print greater_less_equal_5(4)
print greater_less_equal_5(5)
print greater_less_equal_5(6)
</code></pre>
<p>and the output is:</p>
<pre><code>File "python", line 2
    if &gt; 5:
    ^
SyntaxError: invalid syntax
</code></pre>
<p>Is this test rigged to always output a failed result to make me pay for pro and ask for their help?</p>
<p>And the hint given for this is:</p>
<blockquote>
<p>Make sure the if and elif statements end with colons :</p>
<p>Your code should look something like:</p>
<pre><code>if EXPRESSION:
    do something
elif OTHER EXPRESSION:
    do something
else:
    do something
</code></pre>
</blockquote>
<p>Am I just missing something horribly basic?</p>
</div>
<div class="post-text" itemprop="text">
<p>You are indeed missing something basic - namely, that the output of your function doesn't depend on <code>answer</code> at all. No matter what you feed in as <code>answer</code>, because <code>6 &gt; 5</code> is always <code>True</code>, it will always return the result of <em>that</em> case.</p>
<p>What you need is</p>
<pre><code>def greater_less_equal_5(answer):
    if answer &gt; 5:
        return 1
    elif answer &lt; 5:          
        return -1
    elif answer == 5:
        return 0
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You're missing 'answer' variable for expression, which you pass into your function</p>
<pre><code>def greater_less_equal_5(answer):
    if answer &gt; 5:
        return 1
    elif  answer &lt; 5:          
        return -1
    else:
        return 0

print greater_less_equal_5(4)
print greater_less_equal_5(5)
print greater_less_equal_5(6)
</code></pre>
</div>
<span class="comment-copy">Please edit your answer and use code tags.</span>
<span class="comment-copy">It sounds like you're trying to solve an online challenge on an online platform, in which case it is prudent to mention what the stated problem is specifically about (see <a href="http://meta.stackexchange.com/questions/66377/what-is-the-xy-problem">XY problem</a>).</span>
<span class="comment-copy">You're missing something elemental. Your function never references the argument (poorly) named <i>answer</i> it's passed...so it always does the same thing based on the numbers you've hard-coded into it. In other words, <code>6</code> since is always going to be greater than <code>5</code>, so it always returns the value <code>1</code>.</span>
<span class="comment-copy">You should review <a href="https://docs.python.org/3/tutorial/" rel="nofollow noreferrer">The Python Tutorial</a>, especially the sections "<a href="https://docs.python.org/3/reference/compound_stmts.html#if" rel="nofollow noreferrer">The <code>if</code> Statement</a>" and "<a href="https://docs.python.org/3/tutorial/controlflow.html#defining-functions" rel="nofollow noreferrer">Defining Functions</a>".  While <a href="https://meta.stackoverflow.com/questions/265565/downvoting-stupid-simple-questions">basic beginner questions are allowed</a> on SO, the official tutorial(s) for a language are an obvious resource that you should consult before asking here.</span>
<span class="comment-copy">sry for being so noob. I only started checking out this a couple days ago when trying to figure out how to make a twitch bot and figured this might be fun to learn. This being my first post here I am not very familiar with tag ettiquette.</span>
<span class="comment-copy">Thank you all for the responses. I actually figured this out within like twenty mins of posting this. I was having problems forgetting to put answer in so it would reference the expression just forgot to remove the posting.</span>
